2.2.2/_sources/gallery/color/color_by_yvalue.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_color_color_by_yvalue.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_color_color_by_yvalue.py:


================
Color By y-value
================

Use masked arrays to plot a line with different colors by y-value.




.. image:: /gallery/color/images/sphx_glr_color_by_yvalue_001.png
    :class: sphx-glr-single-img





.. code-block:: python

    import numpy as np
    import matplotlib.pyplot as plt

    t = np.arange(0.0, 2.0, 0.01)
    s = np.sin(2 * np.pi * t)

    upper = 0.77
    lower = -0.77


    supper = np.ma.masked_where(s < upper, s)
    slower = np.ma.masked_where(s > lower, s)
    smiddle = np.ma.masked_where(np.logical_or(s < lower, s > upper), s)

    fig, ax = plt.subplots()
    ax.plot(t, smiddle, t, slower, t, supper)
    plt.show()


.. _sphx_glr_download_gallery_color_color_by_yvalue.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: color_by_yvalue.py <color_by_yvalue.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: color_by_yvalue.ipynb <color_by_yvalue.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
